--- a/app/views/note/create.scala.html
+++ b/app/views/note/create.scala.html
@@ -1,6 +1,5 @@
 @import helper._
 @import modules.note.NewNote
-@import modules.note.Color
 @import modules.label.LabelRepository
 @import modules.label.Label
 @import modules.label.LabelComponent
@@ -11,25 +10,26 @@
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
 	<script type="text/javascript">
 	$(document).ready(function(){
-			$("#color-select").on("change", function() {
+			$("#color-select").change( function() {
 
 				var selectedColor = $(this).val()
 				$("#get_colors").val(selectedColor);
 				$("#get_colors").css('backgroundColor', selectedColor);
+
 			});
 		});
 	</script>
 	@form(modules.note.routes.NoteController.create()) {
 
 		@inputText(newNoteForm("text"))
-		@select(newNoteForm("color"), Color.values.map(color => (color.toString, color.toString)).toSeq)
+
 		@select(newNoteForm("labelIds"),labels.map(label=>(label.id.toString,label.label.toString)) , 'multiple -> true)
 		@CSRF.formField
 
-		color: <input  class="jscolor {hash:true}" id="get_colors" value="ab2567">
+ color: <input name="color" class="jscolor {hash:true}" id="get_colors" value="newNoteForm("color")">
 
 <body>
-<select id="color-select" name="color">
+<select id="color-select" >
 	<option value="#ab2567">Purple</option>
 	<option value="#FFFF00">Yellow</option>
 	<option value="#33CC33">Green</option>
