--- a/app/views/note/edit.scala.html
+++ b/app/views/note/edit.scala.html
@@ -29,5 +29,8 @@
 </div>
 
 }
+@form(modules.note.routes.NoteController.delete(note.id), 'class -> "topRight") {
+        <input type="submit" value="Delete this computer" class="btn danger">
+    }
 
 }
