--- a/app/views/note/create.scala.html
+++ b/app/views/note/create.scala.html
@@ -19,7 +19,24 @@
 			});
 		});
 	</script>
-	@form(modules.note.routes.NoteController.create()) {
+<style>
+	label {
+display: block;
+font: 1rem 'Fira Sans', sans-serif;
+}
+
+input,
+label {
+margin: .4rem 0;
+}
+
+.note {
+font-size: .8em;
+}
+</style>
+
+
+	@helper.form(action=modules.note.routes.NoteController.create(), 'enctype -> "multipart/form-data") {
 
 		@inputText(newNoteForm("text"))
 		@select(newNoteForm("labelIds"),labels.map(label=>(label.id.toString,label.label.toString)) , 'multiple -> true)
@@ -27,20 +44,27 @@
 
  color: <input name="color" class="jscolor {hash:true}" id="get_colors" value="newNoteForm("color")">
 
-<body>
+	<body>
 
-<select id="color-select" >
-	<option value="#ab2567">Purple</option>
-	<option value="#FFFF00">Yellow</option>
-	<option value="#33CC33">Green</option>
-	<option value="#111DAB">Blue</option>
-	<option value="#10E5E3">Cyan</option>
-	<option value="#E50A0A">Red</option>
-</select>
-</body>
-		<div class="buttons">
+	<select id="color-select" >
+		<option value="#ab2567">Purple</option>
+		<option value="#FDB913">Yellow</option>
+		<option value="#006A44">Green</option>
+		<option value="#111DAB">Blue</option>
+		<option value="#10E5E3">Cyan</option>
+		<option value="#C1272D">Red</option>
+	</select>
+	</body>
+	<input type="file"
+		   id="picture" name="picture"
+		   accept="image/png, image/jpeg">
 
-			<input type="submit" value="Add note"/>
-		</div>
+			<div class="buttons">
+
+				<input type="submit" value="Add note"/> or
+				<a href="@modules.note.routes.NoteController.list()" class="btn">Cancel</a>
+			</div>
+
 	}
+
 }
